# ammanbus-backend

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  serializers.py  viewsets.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
ammanbusproj/: .env  asgi.py  settings.py  urls.py  wsgi.py
driversapp/: admin.py  apps.py  models.py  urls.py  views.py
driversapp/api/: serializers.py
driversapp/migrations/: 0001_initial.py
mainapp/: admin.py  models.py  urls.py
mainapp/api/: serializers.py  utils.py  viewsets.py
mainapp/migrations/: 0001_initial.py  0002_busstationstop_and_more.py  0003_alter_stationstop_options_and_more.py  0004_alter_stationstop_route.py  0005_alter_stationstop_route.py  0006_faretable_alter_stationstop_options.py  0007_driver_rename_route_id_bus_current_capacity_and_more.py  0008_driver_user_alter_bus_driver.py
passengersapp/: apps.py
temp/: admin3.py  models3.py  serializers3.py  urls3.py  viewsets3.py
templates/: driver_register.html  driverdash.html  home.html  login.html  passenger_register.html  passengerdash.html  register.html
